# extract_aligned_region

./: LICENSE  aligned_region.py  pyproject.toml  readme.md
