[project]
name = "extract_aligned_region"
authors = [
    {name = "Dillon Barker", email = "dillon.barker@phac-aspc.gc.ca"},
]
maintainers = [
    {name = "Dillon Barker", email = "dillon.barker@phac-aspc.gc.ca"},
]
version = "0.1.0"
requires-python = ">=3.8"
readme = "readme.md"

[project.urls]
Homepage = "https://github.com/dorbarker/extract_aligned_region"

[project.scripts]
extract_aligned_region = "aligned_region:main"